# qid

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: audit.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: eap.rs  jwt.rs  policy.rs  radius.rs  saml_xml.rs  scim_filter.rs  tacacs.rs
qid-admin/: Cargo.toml
qid-admin/src/: audit.rs  authz.rs  directory.rs  identity.rs  lib.rs  ops.rs  policy.rs  saas.rs  tests.rs
qid-admin/tests/: saas_admin.rs
qid-agent/: Cargo.toml
qid-agent/src/: main.rs
qid-core/: Cargo.toml
qid-core/src/: assurance.rs  baggage.rs  cache.rs  cloudevents.rs  config.rs  content_security.rs  contract.rs  did.rs  dpop.rs  email_auth.rs  error.rs  event.rs  forwarded.rs  idempotency.rs  idna.rs  json.rs  jwt.rs  ldif.rs  lib.rs  models.rs  notifications.rs  oauth.rs  pkce.rs  plan.rs  problem_details.rs  security_txt.rs  state.rs  structured_fields.rs  tenant.rs  test_helpers.rs  util.rs  web_push.rs  zero_rtt.rs
qid-core/tests/: property_tests.rs
qid-crypto/: Cargo.toml
qid-crypto/src/: acme.rs  aead.rs  cose.rs  ech.rs  hotp.rs  hpke.rs  jwe.rs  jwk.rs  jwt.rs  kdf.rs  keyring.rs  keystore.rs  lib.rs  password.rs  pkcs11.rs  pki.rs  pqc.rs  totp.rs  tpm.rs  x25519.rs
qid-crypto/tests/: property_tests.rs
qid-dev/: Cargo.toml
qid-dev/src/: main.rs
qid-diagnostics/: Cargo.toml
qid-diagnostics/src/: config.rs  lib.rs  network.rs  ops_checks.rs  profile.rs  storage.rs  tests.rs
qid-directory/: Cargo.toml
qid-directory/src/: connector.rs  ldap_filter.rs  lib.rs  routes.rs  tests.rs  types.rs
qid-federation/: Cargo.toml
qid-federation/src/: broker.rs  lib.rs  tests.rs
qid-http/: Cargo.toml
qid-http/src/: lib.rs  middleware.rs  ratelimit.rs  security_headers.rs  trusted_types.rs
qid-iga/: Cargo.toml
qid-iga/src/: engine.rs  lib.rs  rebac.rs  routes.rs  tests.rs
qid-iga/tests/: iga_routes.rs  rebac_routes.rs
qid-mfa/: Cargo.toml
qid-mfa/src/: email_magic.rs  lib.rs  push.rs
qid-mfa/tests/: factors.rs
qid-migrate/: Cargo.toml
qid-migrate/src/: main.rs
qid-migrate/tests/: migration.rs
qid-network/: Cargo.toml
qid-network/src/: capport.rs  diameter.rs  eap_handshake.rs  lib.rs  quic.rs  radius_tls.rs  server.rs
qid-oauth/: Cargo.toml
qid-oauth/src/: gnap.rs  grant_management.rs  lib.rs  mtls.rs  transaction_tokens.rs
qid-oauth/tests/: property_tests.proptest-regressions  property_tests.rs  token_flows.rs
qid-observability/: Cargo.toml
qid-observability/src/: audit.rs  lib.rs  log.rs  metrics.rs  openmetrics.rs  otlp.rs  syslog.rs
qid-observability/tests/: otel_integration.rs
qid-oidc/: Cargo.toml
qid-oidc/src/: discovery.rs  lib.rs  provider.rs  rp_metadata.rs  shared_signals.rs
qid-oidc/tests/: authorize_par.rs
qid-ops/: Cargo.toml
qid-ops/src/: backup.rs  cache.rs  cluster.rs  keyring.rs  lib.rs
qid-policy/: Cargo.toml
qid-policy/src/: cedar.rs  cedar_embedded.rs  lib.rs  models.rs  native.rs  rego.rs
qid-policy/tests/: policy_flows.rs
qid-proxy/: Cargo.toml
qid-proxy/src/: assertion.rs  captive_portal.rs  lib.rs  pep_decision.rs
qid-resource/: Cargo.toml
qid-resource/src/: device.rs  eat.rs  fedcm.rs  lib.rs  par.rs  session_auth.rs  spiffe.rs  workload.rs  workload_auth.rs
qid-resource/tests/: ciam.rs  fedcm.rs  par.rs  workload.rs
qid-risk/: Cargo.toml
qid-risk/src/: lib.rs
qid-risk/tests/: scoring.rs
qid-saml/: Cargo.toml
qid-saml/src/: artifact.rs  attribute_query.rs  binding.rs  encryption.rs  lib.rs  metadata.rs  redirect_binding.rs  routes.rs  saml_document.rs  signature.rs  test-ec-key.pem  tests.rs  xml.rs  xmldsig.rs
qid-saml/tests/: saml_flows.rs
qid-scim/: Cargo.toml
qid-scim/src/: filter.rs  lib.rs  response.rs
qid-scim/tests/: scim_users.rs
qid-session/: Cargo.toml
qid-session/src/: auth.rs  browser.rs  hibp.rs  lib.rs  refresh.rs  totp_api.rs  webauthn.rs
qid-session/tests/: session_flows.rs
qid-storage/: Cargo.toml
qid-storage/migrations/: 20250101000001_initial_schema.sql  20250618000001_access_tokens_allow_non_user_subjects.sql  20250618000002_device_authorization_grants.sql  20250618000003_authorization_details.sql  20250618000004_access_token_cnf.sql  20250618000005_scim_enterprise_extension.sql  20250618000006_audit_hash_chain.sql  20250618000007_audit_retention_config.sql  20250618000008_token_metadata.sql  20250618000009_authorization_code_context.sql  20250618000010_client_auth_method.sql  20250618000011_ciba_grants.sql  20250618000012_client_secret_hash.sql  20250618000013_client_mtls_thumbprints.sql  20250618000014_token_family_authorization_context.sql  20250618000015_client_jwks.sql  20250618000016_saas_models.sql  20250618000017_iga_records.sql  20250618000018_iga_access_review_campaigns.sql  20250618000019_iga_entitlements.sql  20250618000020_iga_access_review_decisions.sql  20250618000021_iga_access_packages.sql  20250618000022_iga_jit_privilege_grants.sql  20250618000023_iga_certifications.sql  20250618000024_iga_findings.sql  20250618000025_device_authorization_polling.sql  20250618000026_ciba_polling.sql  20250618000027_vc_credential_statuses.sql  20250618000028_app_catalog_realm_id.sql  20250618000029_ciam_records.sql  20250618000030_ciam_brands.sql  20250618000031_ciam_identity_links.sql  20250618000032_delegated_tenant_admins.sql  20250618000033_custom_domain_lifecycle.sql  20250618000034_workload_certificates.sql  20250622000001_account_lockout.sql  20250622000002_client_logout_uris.sql  20250622000003_client_backchannel_notification_endpoint.sql  20250622000004_client_metadata.sql  20250622000005_relationship_tuples.sql  (+9 more)
qid-storage/src/: lib.rs  sql.rs  traits.rs
qid-storage/tests/: file_repository.rs  sql_repository.rs
qid-sync/: Cargo.toml
qid-sync/src/: main.rs
qid-vc/: Cargo.toml
qid-vc/src/: bitstring_status_list.rs  haip.rs  issuer.rs  lib.rs  mdoc.rs  oid4vp.rs  status.rs  verifier.rs
qid-vc/tests/: credential_endpoint.rs
qid-worker/: Cargo.toml
qid-worker/src/: audit.rs  cli.rs  key_rotation.rs  lib.rs  main.rs  notification.rs  smtp_transport.rs  sync.rs
(+230 files in other folders)
