[package]
name = "qid-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Admin REST API for qid identity platform"

[dependencies]
metrics.workspace = true
qid-core.workspace = true
qid-http.workspace = true
qid-observability.workspace = true
qid-ops.workspace = true
qid-policy.workspace = true
qid-risk.workspace = true
qid-storage.workspace = true
qid-crypto.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
http-body-util = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
qid-crypto = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
