[package]
name = "qid-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "qid-dev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qid-core = { workspace = true }
qid-crypto = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
