[package]
name = "qid-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
qid-core = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
