[package]
name = "qid-iga"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
qid-core = { workspace = true }
qid-oauth = { workspace = true }
qid-policy = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
qid-crypto = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
