[package]
name = "qid-mfa"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
qid-core = { workspace = true }
qid-crypto = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
