[package]
name = "qid-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
gnap = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
qid-core = { workspace = true }
qid-http = { workspace = true }
qid-crypto = { workspace = true }
qid-ops = { workspace = true }
qid-observability = { workspace = true }
metrics = { workspace = true }
base64 = { workspace = true }
qid-session = { workspace = true }
qid-storage = { workspace = true }
qid-saml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = "1"
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
qid-crypto = { workspace = true }
sha2 = { workspace = true }
qid-storage = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
