[package]
name = "qid-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { version = "0.27", optional = true, default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.27", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", optional = true, default-features = false, features = ["trace", "rt-tokio"] }
tracing-opentelemetry = { version = "0.29", optional = true }
qid-core = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
otel-otlp = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "otel_integration"
required-features = ["otel-otlp"]
