[package]
name = "qid-oidc"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
qid-core = { workspace = true }
qid-http = { workspace = true }
qid-crypto = { workspace = true }
qid-oauth = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
qid-session = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = "1"
tokio = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
ulid = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
