[package]
name = "qid-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
qid-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
