[package]
name = "qid-saml"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
p256 = { workspace = true }
qid-core = { workspace = true }
qid-storage = { workspace = true }
rand = { workspace = true }
roxmltree = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
urlencoding = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
