[package]
name = "qid-scim"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
metrics = { workspace = true }
qid-core = { workspace = true }
qid-http = { workspace = true }
qid-storage = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
qid-crypto = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
