[package]
name = "qid-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
qid-core = { workspace = true }
qid-http = { workspace = true }
tracing = { workspace = true }
qid-crypto = { workspace = true }
qid-mfa = { workspace = true }
qid-ops = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
url = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
uuid = { version = "1" }
webauthn-rs = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
