[package]
name = "qid-vc"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
qid-core = { workspace = true }
qid-crypto = { workspace = true }
qid-oauth = { workspace = true }
qid-storage = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
qid-core = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
