[package]
name = "qid-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "qid-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qid-core = { workspace = true }
qid-crypto = { workspace = true }
qid-directory = { workspace = true }
qid-observability = { workspace = true }
qid-ops = { workspace = true }
qid-scim = { workspace = true }
qid-storage = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
zeroize = { workspace = true }
lettre = { workspace = true, optional = true, features = ["tokio1-rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }

[features]
smtp-transport = ["lettre"]
